--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --respawn --transpile-only src/pagination-sorting.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/create.ts",
+    "prisma": "prisma format"
   },
   "keywords": [],
   "author": "",
